--- a/.github/workflows/build_dl.yml
+++ b/.github/workflows/build_dl.yml
@@ -1,1 +1,44 @@
+name: build_dl
 
+on:
+#  release:
+#    types: [published]
+#  push:
+#    branches:
+#      - 
+#    paths:
+#      - '.config'
+#  schedule:
+#    - cron: 0 8 * * 5
+  watch:
+    types: [started]
+    
+env:
+
+  TZ: Asia/Shanghai
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    if: github.event.repository.owner.id == github.event.sender.id
+
+    steps:
+       - name: Checkout
+         uses: actions/checkout@master
+         
+       - name: Cleaning up
+         run: |
+           docker rmi `docker images -q`
+       - name: Cloning 
+         run: |
+            git clone --recurse-submodules 
+            sudo chmod -R 777 
+            curl -sL https://git.io/file-transfer | sh
+             
+       
+       - name: up
+         run: |
+           ls /home/runner/work/actions_build_ErfanGSIs/actions_build_ErfanGSIs/ErfanGSIs/output/
+           7z a -r dl.7z .
+           sudo ./transfer wet dl.7z
+           sudo rm dl.7z      
