--- a/.github/workflows/build_dl.yml
+++ b/.github/workflows/build_dl.yml
@@ -31,13 +31,15 @@ jobs:
            docker rmi `docker images -q`
        - name: Cloning 
          run: |
-            git clone --recurse-submodules  https://github.com/Ayush-Walia/lenovo_z5_dump.git
-            sudo chmod -R 777 lenovo_z5_dump
+            #git clone --recurse-submodules  https://github.com/Ayush-Walia/lenovo_z5_dump.git
+            #sudo chmod -R 777 lenovo_z5_dump
+            pip install gdown
+            gdown https://drive.google.com/uc?id=15XzXkaiI1bMs70ZZk7XC0j2WzHbaxyf9  -O havoc3.8.zip
             curl -sL https://git.io/file-transfer | sh
              
        
        - name: up
          run: |
-           7z a -r dl.7z ./lenovo_z5_dump/vendor
-           sudo ./transfer wet dl.7z
-           sudo rm dl.7z      
+           #7z a -r dl.7z ./lenovo_z5_dump/vendor
+           sudo ./transfer wet havoc3.8.zip
+           #sudo rm dl.7z      
